--- a/IOSCustomerSurvey/Base.lproj/Main.storyboard
+++ b/IOSCustomerSurvey/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="i7t-cA-xWW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="i7t-cA-xWW">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -138,8 +138,8 @@
                                     <action selector="submitBtnClick:" destination="ZcE-ku-jfz" eventType="touchUpInside" id="6AB-yr-xtB"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fcL-48-4Wn" customClass="RatingControlView" customModule="IOSCustomerSurvey" customModuleProvider="target">
-                                <rect key="frame" x="112" y="279" width="220" height="44"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fcL-48-4Wn" customClass="RatingControlView" customModule="IOSCustomerSurvey" customModuleProvider="target">
+                                <rect key="frame" x="132" y="279" width="220" height="44"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -252,7 +252,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="67R-Yb-M6e">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="67R-Yb-M6e">
                                 <rect key="frame" x="16" y="20" width="343" height="647"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7V-En-IFS" customClass="DLRadioButton">
@@ -280,7 +280,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qNf-HS-oo4">
                                         <rect key="frame" x="216" y="178" width="40" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button" image="E4CA5B71-E21F-4D58-879E-79E52D706768"/>
+                                        <state key="normal" title="Button" image="button:qNf-HS-oo4:image"/>
                                         <connections>
                                             <action selector="dateToBtnClick:" destination="bNz-zm-GpX" eventType="touchUpInside" id="xVO-ZK-O6n"/>
                                         </connections>
@@ -295,7 +295,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g7C-4A-Aqj">
                                         <rect key="frame" x="218" y="85" width="56" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button" image="E4CA5B71-E21F-4D58-879E-79E52D706768"/>
+                                        <state key="normal" title="Button" image="button:qNf-HS-oo4:image"/>
                                         <connections>
                                             <action selector="dateFromBtnClick:" destination="bNz-zm-GpX" eventType="touchUpInside" id="0Ke-4q-8vh"/>
                                             <action selector="dateToBtnClick:" destination="bNz-zm-GpX" eventType="touchUpInside" id="dcS-do-oAv"/>
@@ -311,7 +311,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ij7-g0-y9I">
                                         <rect key="frame" x="228" y="-13" width="37" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button" image="7A5D4261-F7E4-46D1-84C2-9BD4800422B5"/>
+                                        <state key="normal" title="Button" image="button:Ij7-g0-y9I:image"/>
                                         <connections>
                                             <action selector="dealerIdBtnClick:" destination="bNz-zm-GpX" eventType="touchUpInside" id="WNH-Mg-0Wo"/>
                                         </connections>
@@ -388,13 +388,6 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Prototype" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PAx-8m-vfB">
-                                    <rect key="frame" x="139" y="318" width="97" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <nil key="textColor"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XKx-Cd-MCZ">
                                     <rect key="frame" x="112" y="424" width="240" height="128"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -417,7 +410,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="txtDealerId" destination="PAx-8m-vfB" id="ePu-0Z-xws"/>
                         <segue destination="PsE-8C-P73" kind="unwind" identifier="ToLogin" unwindAction="unwindToLoginWithSender:" id="KeJ-Vy-reA"/>
                     </connections>
                 </viewController>
@@ -850,7 +842,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="7A5D4261-F7E4-46D1-84C2-9BD4800422B5" width="18" height="18">
+        <image name="button:Ij7-g0-y9I:image" width="18" height="18">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -923,7 +915,7 @@ DtgO4A7jDugO9w77DwIPCg8XDxwPHg8gDyUPLQ8wDzUPPQ9AD1IPVQ9aAAAAAAAAAgEAAAAAAAAAQQAA
 AAAAAAAAAAAAAAAAD1w
 </mutableData>
         </image>
-        <image name="E4CA5B71-E21F-4D58-879E-79E52D706768" width="21" height="21">
+        <image name="button:qNf-HS-oo4:image" width="21" height="21">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
